# python-base-setup-2023

./: .env.sample  Makefile  README.md  main.py  pyproject.toml
app/a_simple_factory/: main.py
